--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://huyberic:huyberic@huybericdb.aol5i.mongodb.net/M8Tracking
+MONGO_URI=mongodb+srv://huyberic:huyberic@huybericdb.aol5i.mongodb.net/M8Tracking?retryWrites=true&w=majority&appName=HUYBERICDB
 PORT=5000
 JWT_SECRET=supersecretkey
